Fix mobile overlap

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -231,6 +231,7 @@ body {
         .bigImages .bigImage {
           display: flex;
           flex-direction: column;
+          max-height: none;
         }
       }
     }
